--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -86,7 +86,7 @@ jobs:
       #- name: Run test coverage
       #  run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.testcoverage }}
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        run: npm run build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
