--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -33,6 +33,8 @@ jobs:
         run: npm ci
       - name: Build with Next.js
         run: npm run build
+      - name: List files
+        run: ls -R
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
