--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.0.2",
+    "@next/third-parties": "^15.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
     "next": "14.2.13",
