feat: comment box added

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/third-parties": "^15.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/mdx": "^2.0.13",
+    "commentbox.io": "^2.1.0",
     "next": "14.2.13",
     "next-mdx-remote": "^5.0.0",
     "prismjs": "^1.29.0",
